# air-ground-ops

./: .gitignore  CLAUDE.md  README.md
.github/workflows/: ci.yml
ros2_ws/src/comm_layer/: package.xml  setup.cfg  setup.py
ros2_ws/src/comm_layer/comm_layer/: __init__.py  mission_schema.md  network_simulator_node.py  uav_mission_publisher_node.py  ugv_mission_receiver_node.py
ros2_ws/src/comm_layer/launch/: network_simulation.launch.py
ros2_ws/src/comm_layer/resource/: comm_layer
ros2_ws/src/multi_robot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/multi_robot_bringup/launch/: simulation.launch.py
ros2_ws/src/multi_robot_bringup/rviz/: mrta_demo.rviz
ros2_ws/src/multi_robot_bringup/worlds/: urban_obstacles.sdf
ros2_ws/src/task_allocator/: package.xml  setup.py
ros2_ws/src/task_allocator/task_allocator/: capability_belief.py  hungarian_allocator_node.py
ros2_ws/src/task_allocator/test/: test_capability_belief.py  test_uav_ugv_link.py
ros2_ws/src/uav_description/: CMakeLists.txt  package.xml
ros2_ws/src/uav_description/launch/: uav.launch.py
ros2_ws/src/uav_description/models/: uav.sdf
ros2_ws/src/uav_description/urdf/: uav.urdf.xacro
ros2_ws/src/uav_observer/: package.xml  setup.cfg  setup.py
ros2_ws/src/uav_observer/uav_observer/: target_observer_node.py
ros2_ws/src/ugv_description/: CMakeLists.txt  package.xml
ros2_ws/src/ugv_description/launch/: ugv.launch.py
ros2_ws/src/ugv_description/models/: ugv_diffdrive.sdf
ros2_ws/src/ugv_description/urdf/: ugv.urdf.xacro
ros2_ws/src/ugv_nav/: package.xml  setup.cfg  setup.py
ros2_ws/src/ugv_nav/test/: test_flake8.py
ros2_ws/src/ugv_nav/ugv_nav/: assignment_marker_node.py  demo_display_node.py  ugv_goal_follower_node.py
