<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>multi_robot_bringup</name>
  <version>0.0.1</version>
  <description>Bringup package for UAV-UGV simulation in Gazebo Harmonic with ROS 2 Jazzy.</description>
  <maintainer email="privaeloking@gmail.com">tagnon</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Gazebo + bridge -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- Description packages launched from here -->
  <exec_depend>uav_description</exec_depend>
  <exec_depend>ugv_description</exec_depend>
  <exec_depend>comm_layer</exec_depend>

  <!-- Optional visualization -->
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
